Fix dark mode bug in the "Set Password" screen

--- a/static/css/set_password.css
+++ b/static/css/set_password.css
@@ -1,5 +1,5 @@
 #set-password-group #password {
-    border-color: #ddd;
+    border-color: var(--border-color);
     box-shadow: none;
 }
 
@@ -9,7 +9,7 @@
 }
 
 #meter div {
-    background: #ddd;
+    background: var(--border-color);
     height: 5px;
     flex: 1;
     border-radius: 2px;
